--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Row title -->
     <main class="row title">
       <ul>
-        <li>Game Title</li>
+        <li>Game Title<span class="small">(click to go to source code)</span></li>
         <li>Genre</li>
         <li> Platform </li>
         <li>Type</li>
