--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- Row 6 -->
     <article class="row mlb">
       <ul>
-        <li><a href="#">Pilot training</a></li>
+        <li><a href="https://github.com/bondanuclear/Pilot-training">Pilot training</a></li>
         <li>Rail shooter</li>
         <li>PC</li>
         <li>Game from courses</li>
